@@ -5,13 +5,14 @@ import com.PetCare.domain.Pet.PetReservation;
 import com.PetCare.domain.Reservation.CustomerReservation.ReservationStatus;
 import com.PetCare.domain.Reservation.SitterSchedule.SitterSchedule;
 import com.PetCare.dto.Pet.response.PetReservationResponse;
+import com.PetCare.dto.Review.response.ReviewResponse;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class SitterScheduleResponse { // 돌봄사 시점 예약 조회
 
@@ -41,9 +42,12 @@ public class SitterScheduleResponse { // 돌봄사 시점 예약 조회
         private String sitterName;
         private int price;
         private LocalDate reservationAt;
+        private String zipcode;
+        private String address;
         private LocalDateTime createdAt;
         private ReservationStatus status;
         private List<PetReservationResponse> pets;
+        private ReviewResponse.GetDetail review;
 
         public GetDetail(Member customer, Member sitter, SitterSchedule sitterSchedule, List<PetReservation> pets) {
             this.id = sitterSchedule.getId();
@@ -53,12 +57,18 @@ public class SitterScheduleResponse { // 돌봄사 시점 예약 조회
             this.sitterName = sitter.getName();
             this.price = sitterSchedule.getPrice();
             this.reservationAt = sitterSchedule.getReservationAt();
+            this.zipcode = sitter.getZipcode();
+            this.address = sitter.getAddress();
             this.createdAt = sitterSchedule.getCreatedAt();
             this.status = sitterSchedule.getStatus();
             this.pets = pets
                     .stream()
                     .map(PetReservationResponse::new)
-                    .collect(Collectors.toList());
+                    .toList();
+
+            this.review = Optional.ofNullable(sitterSchedule.getCustomerReservation().getReview())
+                    .map(ReviewResponse.GetDetail::new)
+                    .orElse(new ReviewResponse.GetDetail());
         }
     }
 
